--- a/index.html
+++ b/index.html
@@ -12,11 +12,128 @@
         body {
             background-color: #414c65;
         }
+
+        .titlebar {
+            height: 30px;
+            background: #1e1e2e;
+            user-select: none;
+            display: none;
+            grid-template-columns: auto max-content;
+            grid-auto-rows: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 9999;
+            color: white;
+        }
+        .titlebar > .controls {
+            display: flex;
+            height: 100%;
+        }
+        .titlebar button {
+            appearance: none;
+            padding: 0;
+            margin: 0;
+            border: none;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            height: 100%;
+            background-color: transparent;
+            box-sizing: border-box;
+        }
+        .titlebar button:hover {
+            background: #45475a;
+        }
     </style>
     <body>
+        <div class="titlebar">
+            <div data-tauri-drag-region></div>
+            <div class="controls">
+                <button id="titlebar-minimize" title="minimize">
+                    <svg
+                        fill="currentColor"
+                        stroke-width="0"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 16 16"
+                        style="overflow: visible; color: currentcolor"
+                        height="1em"
+                        width="1em"
+                    >
+                        <path
+                            d="M2 7.75A.75.75 0 0 1 2.75 7h10a.75.75 0 0 1 0 1.5h-10A.75.75 0 0 1 2 7.75Z"
+                        ></path>
+                    </svg>
+                </button>
+                <button id="titlebar-maximize" title="maximize">
+                    <svg
+                        fill="currentColor"
+                        stroke-width="0"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512"
+                        style="overflow: visible; color: currentcolor"
+                        height="0.9em"
+                        width="0.9em"
+                    >
+                        <path
+                            d="M.3 89.5C.1 91.6 0 93.8 0 96v320c0 35.3 28.7 64 64 64h384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64c-2.2 0-4.4.1-6.5.3-9.2.9-17.8 3.8-25.5 8.2-10.2 6-18.6 14.6-24.3 25-3.9 7.3-6.5 15.4-7.4 24zM48 224h416v192c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V224z"
+                        ></path>
+                    </svg>
+                </button>
+                <button id="titlebar-close" title="close">
+                    <svg
+                        fill="currentColor"
+                        stroke-width="0"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 16 16"
+                        style="overflow: visible; color: currentcolor"
+                        height="1em"
+                        width="1em"
+                    >
+                        <path
+                            fill-rule="evenodd"
+                            d="m7.116 8-4.558 4.558.884.884L8 8.884l4.558 4.558.884-.884L8.884 8l4.558-4.558-.884-.884L8 7.116 3.442 2.558l-.884.884L7.116 8z"
+                            clip-rule="evenodd"
+                        ></path>
+                    </svg>
+                </button>
+            </div>
+        </div>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
 
         <script src="/src/index.tsx" type="module"></script>
+        <script type="module">
+            if (window.__TAURI__) {
+                document
+                    .querySelector("#root")
+                    ?.style.setProperty("padding-top", "30px");
+                document
+                    .querySelector(".titlebar")
+                    ?.style.setProperty("display", "grid");
+                import("@tauri-apps/api/window").then(
+                    ({ getCurrentWindow }) => {
+                        const appWindow = getCurrentWindow();
+                        document
+                            .getElementById("titlebar-minimize")
+                            ?.addEventListener("click", () =>
+                                appWindow.minimize(),
+                            );
+                        document
+                            .getElementById("titlebar-maximize")
+                            ?.addEventListener("click", () =>
+                                appWindow.toggleMaximize(),
+                            );
+                        document
+                            .getElementById("titlebar-close")
+                            ?.addEventListener("click", () =>
+                                appWindow.close(),
+                            );
+                    },
+                );
+            }
+        </script>
     </body>
 </html>
